--- a/libudi-java/api/pom.xml
+++ b/libudi-java/api/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2011-2015, Dan McNulty
+  ~ Copyright (c) 2011-2015, UDI Contributors
   ~ All rights reserved.
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
