--- a/libudi-java/test/pom.xml
+++ b/libudi-java/test/pom.xml
@@ -51,6 +51,16 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <udi.src.root>${project.parent.basedir}/..</udi.src.root>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
