--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 *.swp
-build/*
-notes.txt
 .sconsign.dblite
 __init__.pyc
-tags
-cscope.out
 .sconf_temp
 config.log
-.clang_complete
 *.iml
 target/
+libudirt/build
