--- a/libudirt/src/SConscript
+++ b/libudirt/src/SConscript
@@ -8,7 +8,7 @@ Import('topenv')
 
 lib_env = topenv.Clone()
 
-lib_env.Append(CPPPATH = ['#/libudicommon', '#/libudirt'])
+lib_env.Append(CPPPATH = ['#/libudicommon', '#/src'])
 
 sources = ['udirt.c', 'udirt-malloc.c']
 libs = ['udicommon']
