--- a/libudirt/SConstruct
+++ b/libudirt/SConstruct
@@ -12,13 +12,16 @@ import udibuild
 topenv = Environment()
 
 # configuring based on the environment
-
 conf = Configure(topenv)
 
 if udibuild.IsX86():
     if not conf.CheckLibWithHeader('udis86', 'udis86.h', 'c'):
         print 'Did not find libudis86'
         Exit(1)
+
+if not conf.CheckLibWithHeader('cbor', 'cbor.h', 'c'):
+    print('Did not find libcbor')
+    Exit(1)
     
 topenv = conf.Finish()
 
