--- a/libudi/Cargo.toml
+++ b/libudi/Cargo.toml
@@ -2,6 +2,7 @@
 name = "udi"
 version = "0.1.0"
 authors = ["Dan McNulty <dkmcnulty@gmail.com>"]
+build = "build.rs"
 
 [dependencies]
 
@@ -11,3 +12,6 @@ serde =  "0.9"
 serde_derive = "0.9"
 serde_cbor = "0.5.2"
 mio = "0.6.6"
+
+[build-dependencies]
+native_file_tests = { path = "../../native-file-tests/rust-binding" }
