--- a/libudirt/src/SConscript
+++ b/libudirt/src/SConscript
@@ -10,7 +10,7 @@ lib_env = topenv.Clone()
 
 lib_env.Append(CPPPATH = ['#/libudicommon', '#/src'])
 
-sources = ['udirt.c', 'udirt-malloc.c']
+sources = ['udirt.c', 'udirt-malloc.c', 'udirt-req.c']
 libs = ['udicommon']
 
 if udibuild.IsUnix():
