--- a/libudi/Cargo.toml
+++ b/libudi/Cargo.toml
@@ -12,6 +12,7 @@ serde_derive = "1.0"
 serde_cbor = "0.6"
 mio = "0.6.6"
 downcast-rs = "1.0.0"
+error-chain = "0.11.0"
 
 [build-dependencies]
 native_file_tests = { path = "../../native-file-tests/rust-binding" }
