WIP #48: more improvements to libudi Java bindings

--- a/libudi-java/test/pom.xml
+++ b/libudi-java/test/pom.xml
@@ -66,6 +66,7 @@
                         <udi.src.root>${project.parent.basedir}/..</udi.src.root>
                     </systemPropertyVariables>
                     <forkMode>never</forkMode>
+                    <useFile>false</useFile>
                 </configuration>
             </plugin>
         </plugins>
