--- a/libudirt/src/SConscript
+++ b/libudirt/src/SConscript
@@ -23,12 +23,18 @@ if udibuild.IsX86():
     sources.append('udirt-x86.c')
     libs.append('udis86')
 
-if udibuild.IsLinux() and udibuild.IsX86():
-    sources.append('udirt-linux-x86.c')
-
 if udibuild.IsLinux():
-    sources.append('udirt-posix-linux-gnu.c')
+    sources.append('udirt-posix-linux.c')
     libs.append('dl')
+
+    if udibuild.IsX86():
+        sources.append('udirt-linux-x86.c')
+
+if udibuild.IsDarwin():
+    sources.append('udirt-posix-darwin.c')
+
+    if udibuild.IsX86_64():
+        sources.append('udirt-darwin-x86-64.c')
 
 lib_env.SharedLibrary('udirt', sources, LIBS=libs)
 lib_env.StaticLibrary('udirt', sources)
