--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # travis-ci integration for udi
 #
 
-notifcations:
+notifications:
   email: false
 
 language: rust
@@ -16,6 +16,7 @@ sudo: false
 
 rust:
   - 1.25.0
+cache: cargo
 
 jdk:
   - oraclejdk8
@@ -24,18 +25,26 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install scons; fi
 
 install:
+  - export UDI_DEPS=$TRAVIS_BUILD_DIR/../deps
   - cd ..
-  - git clone https://github.com/dxdbg/native-file-tests.git
+  - git clone --depth=1 https://github.com/dxdbg/native-file-tests.git
   - cd native-file-tests/java-binding
   - mvn clean install
+  - cd $TRAVIS_BUILD_DIR/..
+  - git clone --depth=1 https://github.com/vmt/udis86.git && cd udis86
+  - ./configure --prefix=$UDI_DEPS && make install
+  - cd $TRAVIS_BUILD_DIR/..
+  - git clone --depth=1 https://github.com/PJK/libcbor.git && cd libcbor
+  - cmake -DCMAKE_INSTALL_PREFIX=$UDI_DEPS . && make install
   - cd $TRAVIS_BUILD_DIR
-
-script:
   - cd libudirt
+  - scons configure CBOR_INC=$UDI_DEPS/include CBOR_LIB=$UDI_DEPS/lib UDIS86_INC=$UDI_DEPS/include UDIS86_LIB=$UDI_DEPS/lib
   - scons all_tests
   - cd ../libudi
-  - cargo test --verbose
+  - cargo test
   - cd ../libudi-c
-  - cargo test --verbose
+  - cargo test
   - cd ../libudi-java
   - mvn clean verify
+
+script: skip
