--- a/libudi/Cargo.toml
+++ b/libudi/Cargo.toml
@@ -11,7 +11,7 @@ serde =  "1.0"
 serde_derive = "1.0"
 serde_cbor = "0.6"
 mio = "0.6.6"
-downcast-rs = "1.0.0"
+downcast-rs = "= 1.0.1"
 error-chain = "0.11.x"
 derive-error-chain = "0.11.0"
 
