--- a/libudi/Cargo.toml
+++ b/libudi/Cargo.toml
@@ -22,6 +22,17 @@ downcast-rs = "= 1.0.1"
 error-chain = "0.11.x"
 derive-error-chain = "0.11.0"
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = [
+    "processthreadsapi",
+    "winnt",
+    "synchapi",
+    "memoryapi",
+    "errhandlingapi",
+    "winbase",
+    "minwinbase"
+    ] }
+
 [build-dependencies]
 native-file-tests = "0.1.0"
 
