--- a/libudi/Cargo.toml
+++ b/libudi/Cargo.toml
@@ -16,4 +16,4 @@ error-chain = "0.11.x"
 derive-error-chain = "0.11.0"
 
 [build-dependencies]
-native_file_tests = { path = "../../native-file-tests/rust-binding" }
+native-file-tests = { path = "../../native-file-tests/rust-binding" }
